Judul Pertama tak ganti

--- a/html/1.html
+++ b/html/1.html
@@ -7,7 +7,7 @@
 </head>
 <script src="../js/prism.js"></script>
 <!-- =============== BAGIAN 1 -====================== MEMBUAT kurawal -->
-<h2> Membuat Kurawal (biasa) </h2>
+<h2> 1. Membuat Kurawal BIASA lho </h2>
 
 Untuk membuat kurawal seperti pada gambar berikut <br>
 <img src="../images/1.png"> 
