--- a/html/1.html
+++ b/html/1.html
@@ -138,6 +138,8 @@ Karena titik B sebagai acuan, maka $x_B=0$. Posisi pengendara sepeda pada saat d
 </code></pre>
 
 
+<!-- Vektor 3 Dimensi -->
+<h2> Ini adalah vektor 3 Dimensi </h2>
 
 
 
