maaf isinya belum ada

--- a/html/1.html
+++ b/html/1.html
@@ -140,7 +140,7 @@ Karena titik B sebagai acuan, maka $x_B=0$. Posisi pengendara sepeda pada saat d
 
 <!-- Vektor 3 Dimensi -->
 <h2> Ini adalah vektor 3 Dimensi </h2>
-
+Isinya belum ada
 
 
 
