--- a/html/1.html
+++ b/html/1.html
@@ -6,8 +6,15 @@
 <!-- You also need to add some content to highlight, but that is covered elsewhere. -->
 </head>
 <script src="../js/prism.js"></script>
+<style type="text/css"> li{
+  font-weight: bold;
+  color: #000;
+  font-size: 24px;
+}</style>
 <!-- =============== BAGIAN 1 -====================== MEMBUAT kurawal -->
-<h2> 1. Membuat Kurawal BIASA lho </h2>
+<ol>
+<li>
+<h3> Membuat Kurawal BIASA lho </h3> </li>
 
 Untuk membuat kurawal seperti pada gambar berikut <br>
 <img src="../images/1.png"> 
@@ -36,7 +43,7 @@ Untuk membuat kurawal seperti pada gambar berikut <br>
 
 
 <!--   ===================  Membuat Tanda Minus dan Matriks Sebaris =================  -->
-<h2>2. Membuat Tanda Minus Kecil dan Matriks sebaris </h2>
+<li> <h3> Membuat Tanda Minus Kecil dan Matriks sebaris </h3>  </li>
 <img src="../images/2.png" width="400"> 
 <pre><code class="language-latex,line-numbers">
 \usepackage{amsmath} % mengandung smallmatrix
@@ -59,7 +66,7 @@ Untuk membuat kurawal seperti pada gambar berikut <br>
 
 
 <!-- ================================ 3. Membuat kurawal berwarna -->
-<h2>3. Membuat Kurawal berwarna </h2>
+<li><h3>Membuat Kurawal berwarna </h3></li>
 <img src="../images/3.png" width="300"> 
 
 <pre> <code class="language-latex,line-numbers">
@@ -86,7 +93,7 @@ Untuk membuat kurawal seperti pada gambar berikut <br>
 
 <!-- ==================== 4. Membuat Catatan Kotak -->
 
-<h2> 4. Membuat Catatan Kotak  </h2>
+<li><h3> Membuat Catatan Kotak  </h3></li>
 <img src="../images/4.png" width="400"> 
 
 <pre> <code class="language-latex,line-numbers">
@@ -115,7 +122,7 @@ $\vec{p}=\frac{1}{2}(\vec{a}+\vec{b})$
 
 
 <!-- Bagian Membuat Minipage   -->
-<h2> Membuat 2 Kolom dengan Minipage </h2>
+<li><h3> Membuat 2 Kolom dengan Minipage </h3></li>
 Untuk membuat 2 kolom dengan minipage kita panggil minipage dan adjustbox
 
 <img src="../images/5.png" width="600"> 
@@ -139,7 +146,7 @@ Karena titik B sebagai acuan, maka $x_B=0$. Posisi pengendara sepeda pada saat d
 
 
 <!-- Vektor 3 Dimensi -->
-<h2> Ini adalah vektor 3 Dimensi </h2>
+<li><h3> Ini adalah vektor 3 Dimensi </h3></li>
 
 <img src="../images/6.png" width="300"> 
 <pre> <code class="language-latex,line-numbers">
@@ -185,6 +192,11 @@ Karena titik B sebagai acuan, maka $x_B=0$. Posisi pengendara sepeda pada saat d
 
 
 
+
+
+
+
+ </ol>
 
 </body>
 
